--- a/app/src/main/res/layout/layout_fragment_demo_subordinate_a.xml
+++ b/app/src/main/res/layout/layout_fragment_demo_subordinate_a.xml
@@ -7,16 +7,49 @@
     android:background="@android:color/holo_green_dark">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/fragment_subordinate_a_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="Demo Subordinate Fragment A"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/sendMessage5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_button_send_message"
+        android:padding="10dp"
+        android:text="Send Message5"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/fragment_subordinate_a_receive_text"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_subordinate_a_title" />
+
+    <TextView
+        android:id="@+id/fragment_subordinate_a_receive_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bg_button_receive_message"
+        android:padding="10dp"
+        android:text="no message received"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/sendMessage5"
+        app:layout_constraintTop_toBottomOf="@+id/fragment_subordinate_a_title" />
 </android.support.constraint.ConstraintLayout>
